--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-6 col-md-offset-3">
       <%= simple_form_for [@cocktail, @dose] do |f| %>
         <%= f.input :description %>
-        <%= f.association :ingredient, collection: Ingredient.all %>
+        <%= f.association :ingredient, collection: Ingredient.all, class: 'select2' %>
         <%= f.submit class: 'btn btn-primary' %>
         <%= link_to 'Cancel', cocktails_path, class: 'btn btn-warning' %>
       <% end %>
