--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,16 @@
+<h1 class='banner'><p class="text-center">Hello</p></h1>
 <div class="container" >
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="text-center">
-          <h1>Cocktails#index</h1>
-          <%= link_to 'New cocktail', new_cocktail_path, class: 'btn btn-primary' %>
-          <% @cocktails.each do |cocktail| %>
-          <br>
-          <%= link_to cocktail.name, cocktail_path(cocktail) %>
-          <%= link_to "delete", cocktail_path(cocktail),
-      method: :delete,
-      data: { confirm: "Are you sure?" }, :class => "btn btn-danger" %>
-          <% end %>
+
+  <% @cocktails.each do |cocktail| %>
+  <div class="col-sm-4">
+    <div class="card">
+      <img class="card-img-top" src="https://d32miag6ta013h.cloudfront.net/master_cocktails/1215/fr-ca/small/525x525_cherry-noir-roman-cherry-martini.jpg" alt="Card image cap" style="width: 100%; height: 100%">
+      <div class="card-body">
+        <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail), :class => "btn btn-danger" %></h5>
       </div>
     </div>
   </div>
+<% end %>
+
 </div>
+
